# clueless-task-manager

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  STRUCTURE.md
application/src/: main.c  sound.c
cmake/: functions.cmake
core/: CMakeLists.txt
core/include/core/: list.h  log.h  platform.h
core/src/: hash_map.c  list.c  log.c  ring_buffer.c
core/src/linux/: ctm_platform.c
core/tests/: hash_map.c  ring_buffer.c
include/: array.h  callbacks.h  common.h  cpu.h  ctm.h  ctm_common.h  ctm_cpu_metrics.h  ctm_memory_metrics.h  ctm_process_manager.h  ctm_process_metrics.h  ctm_process_page.h  ctm_types.h  memory.h  sound.h  style.h  sys_stats.h  ui.h  win98_palette.h
include/app/: sound.h
include/collections/: array.h  collections.h  hash_map.h  ring_buffer.h
include/core/: hash_map.h  io.h  list.h  log.h  platform.h  ring_buffer.h
include/ctm/: cpu.h  ctm.h  hash_map.h  io.h  memory.h  process.h  process_list.h  ring_buffer.h  sampler.h  sound.h  sys.h  ui.h
include/metrics/: cpu.h  ctm_cpu_metrics.h  ctm_memory_metrics.h  ctm_process_manager.h  ctm_process_metrics.h  mem.h  process.h  sampler.h
include/tabs/: performance.h  performance_tab.h  process_tab.h
include/ui/: ctm_process_tab.h  ctmappcontext.h  ctmfooter.h  ctmprocesspage.h  process_tab.h  ui.h
libs/collections/: CMakeLists.txt
libs/collections/src/: array.c  array_iter.c  hash_map.c  ring_buffer.c
libs/collections/tests/: array.c  array_iter.c  ring_buffer.c
libs/log/: CMakeLists.txt
libs/log/src/: log.c
metrics/: CMakeLists.txt
metrics/include/metrics/: ctm_process_manager.h
metrics/src/: ctm_cpu_metrics.c  ctm_memory_metrics.c  ctm_process_manager.c  ctm_process_metrics.c  ctm_sampler.c
metrics/src/internal/: ctm_memory_metrics_internal.h  ctm_process_metrics_internal.h
metrics/tests/: ctm_cpu_metrics.c  ctm_memory_metrics.c  ctm_process_manager.c  ctm_process_metrics.c
modules/io/: CMakeLists.txt
modules/io/include/: cio.h
modules/io/src/: cio.c
modules/sound/: CMakeLists.txt
modules/sound/include/: ctm_sound.h
modules/sound/src/: ctm_sound.c
modules/sound/tests/: test_sound.c
modules/sysinfo/: CMakeLists.txt
modules/sysinfo/include/: common.h  cpu.h  ctm_cpu.h  ctm_memory.h  ctm_process.h  ctm_sysinfo.h  ctm_system.h  memory.h  process.h  sysinfo.h
modules/sysinfo/src/: ctm_cpu.c  ctm_memory.c  ctm_process.c  ctm_sysinfo.c  ctm_system.c  memory.c  process.c  sysinfo.c
modules/sysinfo/tests/: test_cpu.c  test_memory.c  test_process.c  test_sysinfo.c  test_system.c
src/: array.c  callbacks.c  cpu.c  ctm_cpu_metrics.c  ctm_memory_metrics.c  ctm_process_manager.c  ctm_process_metrics.c  ctm_process_metrics_internal.h  ctm_process_page.c  gtk_app_context.c  gtk_process_tab.c  gtk_sampler.c  gtk_status_bar.c  gtk_ui.c  hash_map.c  main.c  ring_buffer.c  sampler.c  sound.c  style.c  sys_stats.c  terminal_ui.c  ui.c
src/collections/: CMakeLists.txt
src/collections/include/collections/: array.h  hash_map.h  ring_buffer.h
src/collections/src/: array.c  array_iter.c  hash_map.c  ring_buffer.c
src/collections/tests/: array.c  array_iter.c  hash_map.c  ring_buffer.c
src/core/: hash_map.c  io.c  list.c  log.c  ring_buffer.c
src/core/linux/: ctm_platform.c  platform.c
src/gtk_ui/: app_context.c  ui.c
src/io/: cio.c
src/linux/: cpu.c  cpu_sampler.c  memory.c  process.c  process_list.c  sampler.c
src/logging/: CMakeLists.txt
src/logging/include/: logging.h
src/metrics/: CMakeLists.txt  cpu.c  ctm_cpu_metrics.c  ctm_memory_metrics.c  ctm_process_manager.c  ctm_process_metrics.c  ctm_sampler.c  mem.c  process.c  process_manager.c  sampler.c
src/metrics/include/metrics/: cpu.h  memory.h  process.h  process_list.h  sampler.h
src/metrics/internal/: cpu_internal.h  ctm_cpu_metrics_internal.h  mem_internal.h  process_internal.h
src/metrics/src/: cpu.c  memory.c  process.c  process_list.c  sampler.c
src/metrics/tests/: cpu.c  memory.c
src/sound/: sound.c
src/sys/: cpu.c  memory.c  process.c  system.c
src/tabs/: performance.c  performance_tab.c  process_tab.c
src/tui/: process_tab.c  ui.c
src/ui/: CtmAppContext.c  CtmFooter.c  CtmProcessPage.c  ctmappcontext.c  ctmfooter.c  ctmprocesspage.c
src/ui/gtk/: app_context.c  process_tab.c  status_bar.c  ui.c
src/ui/tui/: ctm_process_tab.c  process_tab.c  ui.c
src/ui/tui/internal/: process_tab_internal.h
testing/: CMakeLists.txt
testing/src/: test.c
tests/: ctm_cpu_metrics.c  ctm_memory_metrics.c  ctm_process_manager.c  ctm_process_metrics.c  hash_map.c  ring_buffer.c  test.c  test.h  test_main.c
tests/include/: test.h
tests/linux/: cpu.c  memory.c  sound.c
tests/src/: sound.c  test.c
tests/src/core/: hash_map.c  ring_buffer.c
tests/src/metrics/: cpu.c  mem.c  process.c  process_manager.c
tests/sys/: test_cpu.c  test_memory.c  test_process.c  test_system.c
ui/: CMakeLists.txt
ui/include/ui/: ui.h
ui/src/tui/: ctm_process_tab.c  ui.c
